--- a/lager/pom.xml
+++ b/lager/pom.xml
@@ -26,9 +26,13 @@
 		<tag/>
 		<url/>
 	</scm>
+
+	<packaging>jar</packaging>
+
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
